--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^16.13.1",
     "react-player": "^2.6.2",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2",
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
